<resources>
    <string name="app_name">Loan EMI Calculator</string>
    <string name="title_app_loan_emi_calculator">Loan EMI Calculator</string>
    <string name="title_calculate_your_loan_emis_with_confidence">Calculate Your Loan EMIs with Confidence!</string>
    <string name="txt_share">Share</string>
    <string name="txt_privacy">Privacy</string>
    <string name="txt_i_agree_with_terms_amp_conditions"><![CDATA[I agree with Terms & Conditions]]></string>
    <string name="BTN_decline">Decline</string>
    <string name="BTN_accept">Accept</string>
    <string name="title_exit_this_app">Exit This App !!!</string>
    <string name="app_name_emi_calculator">EMI Calculator</string>
    <string name="header_are_you_sure_you_want_to_exit">Are You Sure You Want To Exit ?</string>
    <string name="BTN_no">No</string>
    <string name="BTN_yes">Yes</string>
    <string name="title_privacy_policy">Privacy Policy</string>
    <string name="header_principal_amount">Principal Amount</string>
    <string name="header_rate_of_interest">Rate of Interest (%)</string>
    <string name="header_loan_term_in_year">Loan Tenure</string>
    <string name="header_monthly_emi">Monthly EMI</string>
    <string name="header_monthly_emi1">:: Monthly EMI ::</string>
    <string name="header_total_interest">Total Interest</string>
    <string name="header_total_interest1">:: Total Interest ::</string>
    <string name="header_total_payment">Total Payment</string>
    <string name="header_total_payment1">:: Total Payment ::</string>
    <string name="home_1">Equated Monthly Instalment</string>
    <string name="home_2">&quot;Get instant insights into your loan payments and age milestones with our Loan EMI Calculator and Age Calculator.&quot;</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_calculate">Calculate</string>

    <string name="privacy_policy">
    <u><b>Privacy Policy</b></u>\n\n
    <u><b>Last updated: March 20, 2024</b></u>\n\n
    This Privacy Policy outlines the policies and practices regarding the collection, use, and disclosure of personal information when using our service. Your privacy rights and how we protect your information are described herein.\n\n
    By utilizing our service, you consent to the collection and usage of your information as detailed in this Privacy Policy.\n\n
    <u><b>Interpretation and Definitions</b></u>\n\n
    <u><b>Interpretation</b></u>\n\n
    Capitalized terms herein have meanings as defined under the following conditions. The definitions provided shall apply regardless of the number or form of the words.\n\n\n
    <u><b>Definitions</b></u>\n\n

    For the purposes of this Privacy Policy:\n\n
    - <u><b>"Account"</b></u> signifies a unique account created for accessing our service or specific parts thereof.\n
    - <u><b>"Affiliate"</b></u> refers to an entity controlling, controlled by, or under common control with us, where control implies ownership of 50% or more of the shares, equity interest, or other securities with voting rights.\n
    - <u><b>"Application"</b></u> refers to the software program, namely, Emi Loan Calculator, provided by us.\n
    - <u><b>"Company," "We," "Us," or "Our"</b></u> refers to Emi Loan Calculator.\n
    - <u><b>"Country"</b></u> pertains to Gujarat, India, unless otherwise specified.\n
    - <u><b>"Device"</b></u> denotes any device capable of accessing our service, such as a computer, mobile phone, or tablet.\n
    - <u><b>"Personal Data"</b></u> encompasses any information relating to an identified or identifiable individual.\n
    - <u><b>"Service"</b></u> pertains to the Emi Loan Calculator Application.\n

    - <u><b>"Service Provider"</b></u> signifies any natural or legal entity processing data on our behalf. This may include third-party companies or individuals assisting us in providing, analyzing, or enhancing our service.\n
    - <u><b>"Usage Data"</b></u> refers to data automatically collected, either generated by the use of the service or from the service infrastructure itself, including page visit duration, browser type, IP address, and device identifiers.\n
    - <u><b>"You"</b></u> refers to the individual accessing or using our service, or the legal entity on whose behalf such individual accesses or uses the service.\n\n
    <u><b>Collecting and Using Your Personal Data</b></u>\n\n
    <u><b>Types of Data Collected</b></u>\n\n
    <u><b>Personal Data</b></u>\n\n

    While using our service, we may request certain personally identifiable information from you, which may include but is not limited to:\n
    - <u><b>Usage Data</b></u>: Automatically collected data includes your device\'s IP address, browser type, pages visited, time spent on those pages, and other diagnostic data.\n
    - <u><b>Information collected from mobile devices</b></u>: When accessing our service via a mobile device, we may collect device information such as type, unique ID, IP address, operating system, and mobile browser type.\n
    - <u><b>Browser Information</b></u>: We may collect information that your browser sends whenever you visit our service.\n\n
    <u><b>Information Collected while Using the Application</b></u>\n\n
    When using our application, we may collect location information with your prior permission. This information is used to provide and enhance our service and may be stored on our servers or your device.\n
    You have the option to enable or disable access to this information at any time through your device settings.\n\n
    <u><b>Use of Your Personal Data</b></u>\n\n

    We may use your personal data for the following purposes:\n
    - <u><b>Providing and maintaining our service</b></u>, including monitoring service usage.\n
    - <u><b>Managing your account</b></u> and registration as a user.\n
    - <u><b>Fulfilling contractual obligations</b></u>, including purchase contracts for products or services.\n
    - <u><b>Contacting you</b></u> via email, phone calls, SMS, or push notifications regarding updates or service-related communications.\n
    - <u><b>Providing news, special offers, and information</b></u> about products or services, unless you opt-out.\n
    - <u><b>Managing your requests</b></u> and inquiries.\n
    - <u><b>Evaluating or conducting business transfers</b></u> such as mergers, acquisitions, or asset sales.\n
    - <u><b>Data analysis</b></u>, identifying usage trends, and improving our service, products, and marketing efforts.\n\n
    <u><b>Sharing of Your Personal Information</b></u>\n\n

    We may share your personal information under the following circumstances:\n
    - <u><b>With service providers</b></u> to analyze service usage or contact you.\n
    - <u><b>In business transfers</b></u>, such as mergers or acquisitions.\n
    - <u><b>With affiliates</b></u>, requiring them to adhere to this Privacy Policy.\n
    - <u><b>With business partners</b></u> to offer you certain products, services, or promotions.\n
    - <u><b>With other users</b></u> in public areas of the service.\n
    - <u><b>With your consent</b></u> for any other purpose.\n\n\
    <u><b>Retention of Your Personal Data</b></u>\n\n
    We will retain your personal data only as long as necessary for the purposes outlined in this Privacy Policy. Usage Data may be retained for internal analysis, but only for periods required for security or service improvement purposes, or as mandated by law.\n\n
    <u><b>Transfer of Your Personal Data</b></u>\n\n

    Your personal data, including information collected, may be processed and maintained at our operating offices or other locations where parties involved in processing are situated. By providing your information, you consent to its transfer, including to jurisdictions where data protection laws may differ from those in your jurisdiction. We will take reasonable steps to ensure your data\'s security and compliance with this Privacy Policy.\n\n
    <u><b>Delete Your Personal Data</b></u>\n\n
    You have the right to request deletion of the personal data we have collected about you. You may update, amend, or delete your information by signing in to your account or contacting us. However, certain information may be retained to fulfill legal obligations or lawful bases.\n\n
    <u><b>Disclosure of Your Personal Data</b></u>\n\n
    We may disclose your personal data in the following circumstances:\n
    - <u><b>In business transactions</b></u>, where personal data may be transferred.\n
    - <u><b>When required by law</b></u> or valid requests by public authorities.\n
    - <u><b>To comply with legal obligations</b></u>, protect our rights or property, investigate wrongdoing, ensure the safety of users or the public, or protect against legal liability.\n\n
    <u><b>Security of Your Personal Data</b></u>\n\n

    While we strive to use commercially acceptable means to protect your personal data, no method of transmission over the internet or electronic storage is entirely secure. We cannot guarantee absolute security, but we will take reasonable measures to protect your data.\n\n
    <u><b>Children\'s Privacy</b></u>\n\n
       Our service is not directed at individuals under the age of 13, and we do not knowingly collect personally identifiable information from children under 13. If you are a parent or guardian and become aware that your child has provided personal data without your consent, please contact us, and we will take steps to remove such information from our servers. If consent from a parent is required under applicable law, we may request such consent before collecting and using the information from children.\n\n
    <u><b>Links to Other Websites</b></u>\n\n
    Our service may contain links to third-party websites not operated by us. We strongly advise you to review the privacy policies of every site you visit. We have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.\n\n
    <u><b>Changes to this Privacy Policy</b></u>\n\n
    We may update our Privacy Policy periodically. We will notify you of any changes by posting the updated Privacy Policy on this page. We may also inform you via email or through a notice on our service. It\'s recommended that you review this Privacy Policy periodically for any changes. Changes are effective when they are posted on this page.\n\n
    If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us.\n
</string>


    <string name="years">Years</string>
    <string name="months">Months</string>
    <string name="title_emi">EMI</string>
    <string name="title_loan_amount">Loan Amount</string>
    <string name="title_difference">Difference :</string>
    <string name="title_exp_annual_return">Exp. Annual Return %</string>
    <string name="title_monthly_amount">Monthly Amount</string>
    <string name="title_period">Period</string>
    <string name="title_total_investment">Total Investment</string>

    <string name="header_initial_amount">Initial Amount</string>
    <string name="header_rate_of_gst">Rate of GST (%)</string>
    <string name="header_add_gst">Add GST +</string>
    <string name="header_subtract_gst">Subtract GST -</string>
    <string name="header_net_amount">:: Net Amount ::</string>
    <string name="header_gst_amount">:: GST Amount ::</string>
    <string name="header_total_amount_gst_involves">:: Total Amount (GST Involves) ::</string>
    <string name="header_cgst">:: CGST ::</string>
    <string name="header_sgst">:: SGST ::</string>

</resources>
